--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(GED)
 set(CMAKE_CXX_STANDARD 11)
 
 if (CMAKE_BUILD_TYPE MATCHES Debug)
-    set(CMAKE_CXX_FLAGS "-O0")
+    set(CMAKE_CXX_FLAGS "-O0 -g -fsanitize=address -fno-omit-frame-pointer")
 elseif (CMAKE_BUILD_TYPE MATCHES Release)
     set(CMAKE_CXX_FLAGS "-march=native -frename-registers -funroll-loops -finline-functions -fopenmp -Ofast")
 endif ()
@@ -14,5 +14,29 @@ if (ENABLE_DEBUG_OUTPUT MATCHES True)
 endif()
 
 include_directories(include)
-add_executable(GED src/main.cpp src/input.cpp src/lsap.cpp src/quadratic.cpp src/lsape.cpp include/lsape.hpp include/matop.inl include/matop.hpp src/genCost.cpp src/utils.cpp include/utils.hpp src/IPFP.cpp include/IPFP.hpp src/init.cpp include/init.hpp)
-add_executable(test_lsape src/lsape.cpp include/lsape.hpp test/test_lsape.cpp src/lsap.cpp include/lsap.hpp src/utils.cpp include/utils.hpp)
+add_executable(GED
+        src/main.cpp
+        src/chemgraph.cpp
+        src/lsap.cpp
+        src/quadratic.cpp
+        src/lsape.cpp
+        src/costMat.cpp
+        src/utils.cpp
+        src/IPFP.cpp
+        src/init.cpp
+        src/dataset.cpp)
+add_executable(test_lsape
+        src/lsape.cpp
+        test/test_lsape.cpp
+        src/lsap.cpp
+        src/utils.cpp)
+add_executable(test_dataset
+        src/dataset.cpp
+        test/test_dataset.cpp
+        src/IPFP.cpp
+        src/init.cpp
+        src/costMat.cpp
+        src/chemgraph.cpp
+        src/utils.cpp
+        src/quadratic.cpp
+        src/lsape.cpp)
